# deepseek-code-agent

./: .env.example  .gitignore  BENCHMARKS.md  DEMO_SCREENCAST.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
deepseek_code_agent/: __init__.py  agent.py  messaging.py  monitor.py  queue.py  task.py  team.py
tests/: __init__.py  test_permissions.py  test_tools.py
