[project]
name = "deepseek-code-agent"
version = "0.1.0"
description = "Multi-Agent Framework for AI Coding - Coordinate multiple AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "yksanjo", email = "yksanjo@example.com" }
]
keywords = ["ai", "coding", "agent", "multi-agent", "orchestration"]
homepage = "https://github.com/yksanjo/deepseek-code-agent"
repository = "https://github.com/yksanjo/deepseek-code-agent"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]

dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deepseek_code_agent"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
